--- a/group-call-002/package.json
+++ b/group-call-002/package.json
@@ -14,7 +14,14 @@
   },
   "private": true,
   "dependencies": {
-    "express": "^4.19.2",
-    "jest": "^29.7.0"
+    "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "@babel/preset-typescript": "^7.24.1",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5"
   }
 }
