--- a/group-call-002/package.json
+++ b/group-call-002/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
+    "dev:watch": "node --watch app.js",
     "test": "jest"
   },
   "repository": {
